--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_screenutil: ^5.5.4
   provider: ^6.0.4
-  dio: ^4.0.6
+  http: ^0.13.5
+  firebase_core: ^2.1.0
+  firebase_database: ^10.0.2
+  cloud_firestore: ^4.0.2
+  flutter_keyboard_visibility: ^5.4.0
+  intl_phone_number_input: ^0.7.1
+  otp_text_field: ^1.1.3
 
 dev_dependencies:
   flutter_test:
@@ -48,7 +54,6 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -66,6 +71,7 @@ flutter:
     - assets/images/pic1.png
     - assets/images/camera_icon.png
     - assets/images/send_icon.png
+    - assets/images/login-logo.gif
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
